2009-02-17  Christopher Bratusek <zanghar@freenet.de>
	* Makefile.in
	* sawfish-session.desktop: added session desktop file

2009-02-16  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/animation/outline.jl: load sawfish.wm.gaol for screen-width/height to be set

	* man/news.texi: updated

2009-02-15  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: print message at the end that README.IMPORTANT should be read

	* lisp/sawfish/wm/viewport.jl: changed a string

2009-02-15  Guillermo S. Romero <gsromero@svn.gnome.org>
	* man/faq.texi: more s/sawmill/sawfish/ clean up
	                also explained rc duality (~/.sawfish[/]rc).

	* KEYBINDINGS: Suggest xmodmap and xev. Super (not s) is Super
	
	* man/user-doc.texi: brain backup about workspaces, viewports, etc
	
2009-02-14  Christopher Bratusek <zanghar@freenet.de>
	* man/user-doc.texi: added introduction

	* KEYBINDINGS: fixed some misstakes

2009-02-12  Christopher Bratusek <zanghar@freenet.de>
	* man/user-doc.texi: added uniconify, maximize, unmaximize, delete, shade, unshade, raise, lower, cycle
	                     nicer formatting

2009-02-11  Christopher Bratusek <zanghar@freenet.de>
	* man/user-doc.texi
	* man/Makefile.in: add intial try of a user-doc

2009-02-09  Christopher Bratusek <zanghar@freenet.de>
	* KEYBINDINGS: S is Super not Shift
	               W is Modifier and M is Alt
	               s/take place/are active/g
	
	* lisp/sawfish/wm/commands/shrink-yank: Don't forget to load sawfish.wm.custom

	* po/POTFILES.in: marks.jl is now in .util

	* lisp/sawfish/wm/animation/outline.jl
	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/ext/edge-flip.jl
	* lisp/sawfish/wm/ext/infinite-desktop.jl
	* lisp/sawfish/wm/ext/tooltips.jl
	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/ext/audio-events.jl
	* lisp/sawfish/wm/ext/error-handler.jl
	* lisp/sawfish/wm/ext/shade-hover.jl
	* lisp/sawfish/wm/ext/window-history.jl
	* lisp/sawfish/wm/ext/auto-raise.jl