@@ -2,6 +2,10 @@
 	* Makefile.in
 	* sawfish-session.desktop: added session desktop file
 
+	* configure.in: don't just read README.IMPORTANT if this is an upgrade
+
+	* lisp/sawfish/wm/ext/3d-hack.jl: remove annotate-points - not beeing used
+
 2009-02-16  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/wm/animation/outline.jl: load sawfish.wm.gaol for screen-width/height to be set
 
